--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body>
     <header>
       <div class="logo-container">
-        <a href="#">Bussy</a>
+        <a href="#">wellbe</a>
         <div class="location">
           <i class="fa-solid fa-location-dot"></i>
           <span>Baku</span>
@@ -425,7 +425,7 @@
           <ul class="footer-main">
             <li class="footer-app_links">
               <div class="app-logo">
-                <div><a class="footer-logo">bussy</a></div>
+                <div><a class="footer-logo">wellbe</a></div>
                 <div class="footer-app">
                   <div>
                     <img
