--- a/management.html
+++ b/management.html
@@ -22,15 +22,17 @@
     <link rel="stylesheet" href="/assets/css/management.css" />
   </head>
   <body>
-    <div class="container-fluid vh-100 d-flex flex-column p-0 overflow-hidden p-relative">
-      <!-- Navbar -->
+    <div class="container-fluid w-100 vh-100 overflow-hidden w-0 p-0 bg-warning">
       <nav
-        class="navbar navbar-expand-lg w-100 sticky-top top-0 w-100 bg-dark py-3"
+        class="navbar navbar-expand-lg sticky-top top-0 w-100 bg-dark py-3 d-block d-lg-none"
       >
         <div
           class="container-fluid d-flex align-items-center justify-content-between"
         >
-          <i class="fa-solid fa-bars-staggered text-light fs-2" id="toggle-menu"></i>
+          <i
+            class="fa-solid fa-bars-staggered text-light fs-2"
+            id="toggle-menu"
+          ></i>
           <img src="/assets/images/logo.49ab7d85.svg" alt="" />
           <div class="user">
             <span class="py-2 px-3 text-dark bg-light rounded-circle fs-5"
@@ -39,16 +41,18 @@
           </div>
         </div>
       </nav>
-
-      <!-- Main Content Wrapper -->
-      <div class="d-flex flex-grow-1">
+      <main class="h-100 w-100 overflow-hidden border border-dark">
         <!-- Sidebar -->
-        <nav class="bg-dark sidebar py-0 py-md-3">
-          <div class="row h-100 m-auto flex-grow-1 d-flex align-items-start align-items-md-center  justify-content-start gap-3 w-100">
+        <nav class="sidebar bg-dark sidebar py-0 py-md-3 z-3 h-100">
+          <div
+            class="row h-100 m-auto flex-grow-1 d-flex align-items-start align-items-lg-center justify-content-start gap-3 w-100"
+          >
             <!-- Language Section -->
-            <div class="col-12 d-flex  justify-content-center d-none d-md-flex w-100">
+            <div
+              class="col-12 d-flex justify-content-center d-none d-lg-flex w-100"
+            >
               <div
-                class="language d-flex align-items-center justify-content-center "
+                class="language d-flex align-items-center justify-content-center"
               >
                 <img
                   src="./assets/images/en-gb.66f67f2a.svg"
@@ -60,68 +64,239 @@
             </div>
             <hr class="my-divider text-light w-50 m-auto" />
             <!-- List Section -->
-            <div class="list-container col-12 d-flex flex-column align-items-center w-100 h-75">
-              <div class="list h-100 d-flex align-items-start align-items-md-center justify-content-between flex-column gap-2 w-100 w-md-100 ">
-                <a href="#" class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative">
+            <div
+              class="list-container col-12 d-flex flex-column align-items-center w-100 h-75"
+            >
+              <div
+                class="list h-100 d-flex align-items-start align-items-md-center justify-content-between flex-column gap-2 w-100 w-md-100"
+              >
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
-                  <span class="side-menu_item bg-dark text-light p-0 p-md-1 rounded">management</span>
+                  <span
+                    class="side-menu_item bg-dark text-light p-0 p-md-1 rounded"
+                    >management</span
+                  >
                 </a>
-                <a href="#" class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative">
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
-                  <span class="side-menu_item bg-dark text-light p-0 p-md-1 rounded">management</span>
+                  <span
+                    class="side-menu_item bg-dark text-light p-0 p-md-1 rounded"
+                    >management</span
+                  >
                 </a>
-                <a href="#" class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative">
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
-                  <span class="side-menu_item bg-dark text-light p-0 p-md-1 rounded">management</span>
+                  <span
+                    class="side-menu_item bg-dark text-light p-0 p-md-1 rounded"
+                    >management</span
+                  >
                 </a>
-                <a href="#" class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative">
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
-                  <span class="side-menu_item bg-dark text-light p-0 p-md-1 rounded">management</span>
+                  <span
+                    class="side-menu_item bg-dark text-light p-0 p-md-1 rounded"
+                    >management</span
+                  >
                 </a>
-                <a href="#" class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative">
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
-                  <span class="side-menu_item bg-dark text-light p-0 p-md-1 rounded">management</span>
+                  <span
+                    class="side-menu_item bg-dark text-light p-0 p-md-1 rounded"
+                    >management</span
+                  >
                 </a>
-                <a href="#" class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative">
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
-                  <span class="side-menu_item bg-dark text-light p-0 p-md-1 rounded">management</span>
+                  <span
+                    class="side-menu_item bg-dark text-light p-0 p-md-1 rounded"
+                    >management</span
+                  >
                 </a>
-                <a href="#" class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative">
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
-                  <span class="side-menu_item bg-dark text-light p-0 p-md-1 rounded">management</span>
+                  <span
+                    class="side-menu_item bg-dark text-light p-0 p-md-1 rounded"
+                    >management</span
+                  >
                 </a>
-                <a href="#" class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative">
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
-                  <span class="side-menu_item bg-dark text-light p-0 p-md-1 rounded">management</span>
+                  <span
+                    class="side-menu_item bg-dark text-light p-0 p-md-1 rounded"
+                    >management</span
+                  >
                 </a>
-                <a href="#" class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative">
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
-                  <span class="side-menu_item bg-dark text-light p-0 p-md-1 rounded">management</span>
+                  <span
+                    class="side-menu_item bg-dark text-light p-0 p-md-1 rounded"
+                    >management</span
+                  >
                 </a>
-                <a href="#" class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative">
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
-                  <span class="side-menu_item bg-dark text-light p-0 p-md-1 rounded">management</span>
+                  <span
+                    class="side-menu_item bg-dark text-light p-0 p-md-1 rounded"
+                    >management</span
+                  >
                 </a>
-               </div>
+              </div>
             </div>
             <hr class="my-divider text-light w-50 m-auto" />
             <!-- Avatar Section -->
-            <div class="col-12 d-flex justify-content-center align-items-center w-100 d-none d-md-flex">
-              <div class="sidebar-avatar d-flex justify-content-center align-items-center w-100">
-                <div class="user w-100 h-75 rounded-circle bg-light d-flex align-items-center justify-content-center">
-                  <span class="text-dark fs-3 text-center text-uppercase">o</span>
+            <div
+              class="col-12 d-flex justify-content-center align-items-center w-100 d-none d-lg-flex"
+            >
+              <div
+                class="sidebar-avatar d-flex justify-content-center align-items-center w-100"
+              >
+                <div
+                  class="user w-100 h-75 rounded-circle bg-light d-flex align-items-center justify-content-center"
+                >
+                  <span class="text-dark fs-3 text-center text-uppercase"
+                    >o</span
+                  >
                 </div>
               </div>
             </div>
           </div>
         </nav>
-
-        <!-- Main Content -->
-        <!-- <main class="border border-dark flex-grow-1 p-3">
-          <p>This is the main content area.</p>
-        </main> -->
-      </div>
+      </main>
     </div>
-   <script src="/assets/js/management.js"></script>
+    <!-- <div
+      class="container-fluid vh-100 d-flex flex-column p-0 overflow-hidden p-relative"
+    > -->
+    <!-- Navbar -->
+
+    <!-- Main Content Wrapper -->
+    <!-- <div class="d-flex flex-grow-1"> -->
+
+    <!-- Main Content -->
+    <!-- <main class="flex-grow-1">
+          <div class="row">
+            <div class="col">
+              <ul
+                class="navbar-nav d-flex flex-row gap-3 gap-md-5 px-1 px-md-3 py-2 border-bottom"
+              >
+                <li class="nav-item active">
+                  <a class="nav-link text-dark text-capitalize" href="#"
+                    >Staf Members</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark text-capitalize" href="#"
+                    >Shifts</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark text-capitalize" href="#"
+                    >resources</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-dark text-capitalize" href="#"
+                    >commisions</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="main-content row h-100">
+            <div class="col-12 col-lg-3 bg-light  p-0 d-flex flex-column">
+              <form class="px-5 py-4">
+                <div
+                  class="form-group d-flex flex-row gap-2 align-items-center rounded-3 py-1 px-3"
+                >
+                  <i class="fa-solid fa-magnifying-glass" id="search-icon"></i>
+                  <input
+                    type="email"
+                    placeholder="Search staff members..."
+                    class="w-100 border-0 text-capitalize shadow-none form-control"
+                  />
+                </div>
+              </form>
+              <ul class="user-list d-flex flex-column gap-2 w-100 m-0 p-0">
+                <li class="px-5 py-4 list-item">
+                  <i class="fa-solid fa-bars"></i>
+                  <span
+                    class="text-uppercase p-3 rounded-circle mx-3 user-circle"
+                    >a</span
+                  >
+                  <a href="#" class="text-dark">Aadd</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-5 col-lg-3 border border-dark">
+              <div class="row d-flex flex-column">
+                <div class="col border border-dark py-3 px-4 d-flex flex-column align-items-center g-5">
+                  <div
+                     class="staf-details d-flex justify-content-between align-items-start w-100 pt-2">
+                    <a class="icons"
+                      ><i
+                        class="fa-solid fa-pencil border border-dark p-2 bg-light rounded-2 cursor-pointer"
+                      ></i
+                    ></a>
+                    <a class="avatar d-flex flex-column gap-4 align-items-center">
+                      <span class="px-4 py-3 user-avatar rounded-circle text-uppercase fs-3">a</span>
+                      <div class="staffer-name w-100">
+                        <p class="text-dark fs-3 fw-bold text-center">Orkhan</p>
+                      </div>
+                      <div class="staf-content d-flex flex-row align-items-center">
+                        <ul class="d-flex flex-row align-items-center gap-">
+                          <li class="bg-light p-2 rounded-2 d-flex align-items-center">
+                            <i class="fa-solid fa-star text-warning fs-6"></i>
+                            <i class="fa-solid fa-star text-warning fs-6"></i>
+                          </li>
+                          <li class="owner p-1 rounded-2"><span class="text-dark">owner</span></li>
+                          <li><span class="text-dark fs-6">orkhan1997@gmail.com</span></li>
+                        </ul>
+                      </div>
+                    </a>
+                    <a
+                      class="calendar-icon py-1 px-3 d-flex align-items-center gap-2 bg-light rounded-3"
+                      ><span class="text-dark">show calendar</span>
+                      <i class="fa-solid fa-calendar-days text-dark"></i
+                    ></a>
+                  </div>
+                </div>
+                <div class="col border border-primary"></div>
+              </div>
+            </div>
+            <div class="col-4"></div>
+          </div>
+        </main>
+      </div>
+    </div> -->
+    <script src="/assets/js/management.js"></script>
   </body>
 </html>
