--- a/management.html
+++ b/management.html
@@ -72,7 +72,7 @@
               >
                 <a
                   href="#"
-                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                  class="d-flex align-items-center justify-content-center menu-item mt-lg-1 mt-3 position-relative"
                 >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
                   <span
@@ -82,7 +82,7 @@
                 </a>
                 <a
                   href="#"
-                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                  class="d-flex align-items-center justify-content-center menu-item mt-lg-1 mt-3 position-relative"
                 >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
                   <span
@@ -92,7 +92,7 @@
                 </a>
                 <a
                   href="#"
-                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                  class="d-flex align-items-center justify-content-center menu-item mt-lg-1 mt-3 position-relative"
                 >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
                   <span
@@ -102,7 +102,7 @@
                 </a>
                 <a
                   href="#"
-                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                  class="d-flex align-items-center justify-content-center menu-item mt-lg-1 mt-3 position-relative"
                 >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
                   <span
@@ -112,7 +112,7 @@
                 </a>
                 <a
                   href="#"
-                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                  class="d-flex align-items-center justify-content-center menu-item mt-lg-1 mt-3 position-relative"
                 >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
                   <span
@@ -122,7 +122,7 @@
                 </a>
                 <a
                   href="#"
-                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                  class="d-flex align-items-center justify-content-center menu-item mt-lg-1 mt-3 position-relative"
                 >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
                   <span
@@ -132,7 +132,7 @@
                 </a>
                 <a
                   href="#"
-                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                  class="d-flex align-items-center justify-content-center menu-item mt-lg-1 mt-3 position-relative"
                 >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
                   <span
@@ -142,7 +142,7 @@
                 </a>
                 <a
                   href="#"
-                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                  class="d-flex align-items-center justify-content-center menu-item mt-lg-1 mt-3 position-relative"
                 >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
                   <span
@@ -152,7 +152,7 @@
                 </a>
                 <a
                   href="#"
-                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                  class="d-flex align-items-center justify-content-center menu-item mt-lg-1 mt-3 position-relative"
                 >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
                   <span
@@ -162,7 +162,7 @@
                 </a>
                 <a
                   href="#"
-                  class="d-flex align-items-center justify-content-center menu-item mt-md-1 mt-3 position-relative"
+                  class="d-flex align-items-center justify-content-center menu-item mt-lg-1 mt-3 position-relative"
                 >
                   <i class="fa-solid fa-calendar-days text-light fs-5"></i>
                   <span
