--- a/management.html
+++ b/management.html
@@ -198,25 +198,25 @@
             <div class="row">
               <div class="col">
                 <ul
-                  class="navbar-nav d-flex flex-row gap-2 gap-lg-5 px-1 px-lg-3 py-2 border-bottom"
+                  class="navbar-nav d-flex flex-row gap-2 gap-lg-5 px-2 px-lg-3 justify-content-between justify-content-lg-start border-bottom"
                 >
-                  <li class="nav-item active">
-                    <a class="nav-link text-dark text-capitalize" href="#"
+                  <li class="nav-item py-2 active">
+                    <a class="nav-link text-capitalize" href="#"
                       >Staf Members</a
                     >
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-dark text-capitalize" href="#"
+                  <li class="nav-item py-2">
+                    <a class="nav-link text-capitalize" href="#"
                       >Shifts</a
                     >
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-dark text-capitalize" href="#"
+                  <li class="nav-item py-2">
+                    <a class="nav-link text-capitalize" href="#"
                       >resources</a
                     >
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-dark text-capitalize" href="#"
+                  <li class="nav-item py-2">
+                    <a class="nav-link text-capitalize" href="#"
                       >commisions</a
                     >
                   </li>
