--- a/management.html
+++ b/management.html
@@ -44,9 +44,7 @@
       <main class="h-100 w-100 d-flex">
         <!-- Sidebar -->
         <nav class="sidebar bg-dark sidebar py-0 py-lg-3 h-100">
-          <div
-            class="row h-100 m-auto flex-grow-1 d-flex align-items-start align-items-lg-center justify-content-start gap-3 w-100"
-          >
+          <div class="row h-100 m-auto flex-grow-1 d-flex align-items-start align-items-lg-center justify-content-start gap-3 w-100">
             <!-- Language Section -->
             <div
               class="col-12 d-flex justify-content-center d-none d-lg-flex w-100"
@@ -59,7 +57,7 @@
                   class="w-75 h-75"
                   alt=""
                 />
-                <i class="fa-solid fa-caret-down text-light"></i>
+                <i class="fa-solid fa-caret-down text-light language-icon"></i>
               </div>
             </div>
             <hr class="my-divider text-light w-50 m-auto" />
@@ -68,7 +66,7 @@
               class="list-container col-12 d-flex flex-column align-items-center w-100 h-75"
             >
               <div
-                class="list h-100 d-flex align-items-start align-items-md-center justify-content-between flex-column gap-2 w-100 w-md-100"
+                class="list h-100 d-flex align-items-start align-items-lg-center justify-content-between flex-column gap-2 w-100 w-lg-100"
               >
                 <a
                   href="#"
@@ -160,7 +158,6 @@
                     >management</span
                   >
                 </a>
-
                 <a
                   href="#"
                   class="d-flex align-items-center justify-content-center menu-item mt-2 position-relative"
@@ -178,22 +175,20 @@
             <div
               class="col-12 d-flex justify-content-center align-items-center w-100 d-none d-lg-flex"
             >
-              <div
-                class="sidebar-avatar d-flex justify-content-center align-items-center w-100"
+              <button
+                type="button"
+                class="sidebar-avatar-btn px-3 py-2 rounded-circle"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
               >
-                <div
-                  class="user w-100 h-75 rounded-circle bg-light d-flex align-items-center justify-content-center"
-                >
-                  <span class="text-dark fs-3 text-center text-uppercase"
-                    >o</span
-                  >
-                </div>
-              </div>
+                A
+                <span>a</span>
+              </button>
             </div>
           </div>
         </nav>
         <!-- content -->
-        <section class="main-content flex-grow-1 w-100">
+        <!-- <section class="main-content flex-grow-1 w-100">
           <div class="container-fluid overflow-hidden w-100 h-100 p-0">
             <div class="row">
               <div class="col">
@@ -248,8 +243,8 @@
                       <li class="p-4 list-item">
                         <i class="fa-solid fa-bars"></i>
                         <span
-                          class="text-uppercase p-3 rounded-circle mx-3 user-circle"
-                          >a</span
+                          class="text-uppercase user-avatar p-3 rounded-circle  mx-3 user-circle w-50 h-50 "
+                          >oa</span
                         >
                         <a href="#" class="text-dark">Aadd</a>
                       </li>
@@ -431,10 +426,56 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
+        <!-- Modal -->
+        <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+       <div class="modal-dialog">
+       <div class="modal-content p-4">
+      <div class="modal-head  border-none d-flex">
+        <button type="button" class="btn-close opacity-100" data-bs-dismiss="modal" aria-label="Close"></button>
+        <h1 class="modal-title fs-6 text-capitalize fw-bold" id="exampleModalLabel">switch business</h1>
+      </div>
+      <div class="modal-body p-0 m-0 d-flex flex-column gap-3 mt-4">
+        <form class="w-100">
+          <div class="form-group d-flex flex-row gap-2 align-items-center rounded-3 py-1 px-3">
+            <i
+              class="fa-solid fa-magnifying-glass"
+              id="search-icon"
+            ></i>
+            <input
+              type="email"
+              placeholder="Search staff members..."
+              class="w-100 border-0 text-capitalize shadow-none form-control"
+            />
+          </div>
+        </form>
+        <ul class="w-100 d-flex flex-column p-0 gap-3 my-3">
+          <li class="currently-user pt-3 px-4 w-100 d-flex flex-column align-items-start rounded-3">
+              <span class="text-success fw-bold fs-6">
+                . Currently using
+              </span>
+              <span class="text-dark fw-bolder">Aaddbarber</span>
+              <p class="location-user">Newworth Ct, Columbia</p>
+          </li>
+        
+        </ul>
+      </div>
+      <div class="modal-footer p-0 m-0 d-flex align-items-center justify-content-between">
+        <div>
+          <div>
+            
+          </div>
+          <div></div>
+        </div>
+        <a href="#" class="logout-btn py-2 px-4 border border-dark rounded-3 fs-5 fw-bolder text-dark">Logout</a>
+      </div>
+       </div>
+       </div>
+      </div> -->
       </main>
     </div>
-
+    <!-- Bootstrap Bundle JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/management.js"></script>
   </body>
 </html>
