--- a/management.html
+++ b/management.html
@@ -35,16 +35,24 @@
           ></i>
           <img src="/assets/images/logo.49ab7d85.svg" alt="" />
           <div class="user">
-            <span class="py-2 px-3 text-dark bg-light rounded-circle fs-5"
-              >T</span
+            <button
+              type="button"
+              class="sidebar-avatar-btn px-3 py-2 rounded-circle"
+              data-bs-toggle="modal"
+              data-bs-target="#exampleModal"
             >
+              A
+              <span>a</span>
+            </button>
           </div>
         </div>
       </nav>
       <main class="h-100 w-100 d-flex">
         <!-- Sidebar -->
         <nav class="sidebar bg-dark sidebar py-0 py-lg-3 h-100">
-          <div class="row h-100 m-auto flex-grow-1 d-flex align-items-start align-items-lg-center justify-content-start gap-3 w-100">
+          <div
+            class="row h-100 m-auto flex-grow-1 d-flex align-items-start align-items-lg-center justify-content-start gap-3 w-100"
+          >
             <!-- Language Section -->
             <div
               class="col-12 d-flex justify-content-center d-none d-lg-flex w-100"
