--- a/management.html
+++ b/management.html
@@ -49,7 +49,7 @@
       </nav>
       <main class="h-100 w-100 d-flex">
         <!-- Sidebar -->
-        <nav class="sidebar bg-dark sidebar py-0 py-lg-3 h-100">
+        <nav class="sidebar bg-dark sidebar py-0 py-lg-3 h-100 z-2">
           <div
             class="row h-100 m-auto flex-grow-1 d-flex align-items-start align-items-lg-center justify-content-start gap-3 w-100"
           >
@@ -196,12 +196,12 @@
           </div>
         </nav>
         <!-- content -->
-        <!-- <section class="main-content flex-grow-1 w-100">
+        <section class="main-content flex-grow-1 w-100">
           <div class="container-fluid overflow-hidden w-100 h-100 p-0">
-            <div class="row">
+            <div class="row bg-light content-nav_heading">
               <div class="col">
                 <ul
-                  class="navbar-nav d-flex flex-row gap-2 gap-lg-5 px-2 px-lg-3 justify-content-between justify-content-lg-start border-bottom"
+                  class="navbar-nav d-flex flex-row gap-2 gap-lg-5 px-2 px-lg-3 justify-content-between justify-content-lg-start"
                 >
                   <li class="nav-item py-2 active">
                     <a class="nav-link text-capitalize" href="#"
@@ -209,27 +209,23 @@
                     >
                   </li>
                   <li class="nav-item py-2">
-                    <a class="nav-link text-capitalize" href="#"
-                      >Shifts</a
-                    >
+                    <a class="nav-link text-capitalize" href="#">Shifts</a>
                   </li>
                   <li class="nav-item py-2">
-                    <a class="nav-link text-capitalize" href="#"
-                      >resources</a
-                    >
+                    <a class="nav-link text-capitalize" href="#">resources</a>
                   </li>
                   <li class="nav-item py-2">
-                    <a class="nav-link text-capitalize" href="#"
-                      >commisions</a
-                    >
+                    <a class="nav-link text-capitalize" href="#">commisions</a>
                   </li>
                 </ul>
               </div>
             </div>
             <div class="content h-100">
               <div class="container-fluid h-100 w-100">
-                <div class="row border h-100 h-lg-auto">
-                  <div class="col-12 col-lg-3 bg-light p-0 d-flex flex-column">
+                <div class="row h-100 h-lg-auto">
+                  <div
+                    class="user-form-container col-12 col-lg-3 bg-light p-0 d-flex flex-column position-relative"
+                  >
                     <form class="p-4">
                       <div
                         class="form-group d-flex flex-row gap-2 align-items-center rounded-3 py-1 px-3"
@@ -251,8 +247,8 @@
                       <li class="p-4 list-item">
                         <i class="fa-solid fa-bars"></i>
                         <span
-                          class="text-uppercase user-avatar p-3 rounded-circle  mx-3 user-circle w-50 h-50 "
-                          >oa</span
+                          class="text-uppercase user-avatar p-3 rounded-circle mx-3 user-circle w-50 h-50"
+                          >a</span
                         >
                         <a href="#" class="text-dark">Aadd</a>
                       </li>
@@ -281,7 +277,7 @@
                               class="avatar d-flex flex-column gap-4 align-items-center"
                             >
                               <span
-                                class="px-4 py-3 user-avatar text-dark rounded-circle text-uppercase fs-3"
+                                class="px-4 py-3 user-avatar rounded-circle text-uppercase fs-3" style="color: #979797;"
                                 >a</span
                               >
                               <div class="staffer-name w-100">
@@ -434,52 +430,75 @@
               </div>
             </div>
           </div>
-        </section> -->
+        </section>
         <!-- Modal -->
-        <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-       <div class="modal-dialog">
-       <div class="modal-content p-4">
-      <div class="modal-head  border-none d-flex">
-        <button type="button" class="btn-close opacity-100" data-bs-dismiss="modal" aria-label="Close"></button>
-        <h1 class="modal-title fs-6 text-capitalize fw-bold" id="exampleModalLabel">switch business</h1>
-      </div>
-      <div class="modal-body p-0 m-0 d-flex flex-column gap-3 mt-4">
-        <form class="w-100">
-          <div class="form-group d-flex flex-row gap-2 align-items-center rounded-3 py-1 px-3">
-            <i
-              class="fa-solid fa-magnifying-glass"
-              id="search-icon"
-            ></i>
-            <input
-              type="email"
-              placeholder="Search staff members..."
-              class="w-100 border-0 text-capitalize shadow-none form-control"
-            />
+        <div
+          class="modal fade"
+          id="exampleModal"
+          tabindex="-1"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content p-4">
+              <div class="modal-head border-none d-flex">
+                <button
+                  type="button"
+                  class="btn-close opacity-100"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+                <h1
+                  class="modal-title fs-6 text-capitalize fw-bold"
+                  id="exampleModalLabel"
+                >
+                  switch business
+                </h1>
+              </div>
+              <div class="modal-body p-0 m-0 d-flex flex-column gap-3 mt-4">
+                <form class="w-100">
+                  <div
+                    class="form-group d-flex flex-row gap-2 align-items-center rounded-3 py-1 px-3"
+                  >
+                    <i
+                      class="fa-solid fa-magnifying-glass"
+                      id="search-icon"
+                    ></i>
+                    <input
+                      type="email"
+                      placeholder="Search staff members..."
+                      class="w-100 border-0 text-capitalize shadow-none form-control"
+                    />
+                  </div>
+                </form>
+                <ul class="w-100 d-flex flex-column p-0 gap-3 my-3">
+                  <li
+                    class="currently-user pt-3 px-4 w-100 d-flex flex-column align-items-start rounded-3"
+                  >
+                    <span class="text-success fw-bold fs-6">
+                      . Currently using
+                    </span>
+                    <span class="text-dark fw-bolder">Aaddbarber</span>
+                    <p class="location-user">Newworth Ct, Columbia</p>
+                  </li>
+                </ul>
+              </div>
+              <div
+                class="modal-footer p-0 m-0 d-flex align-items-center justify-content-between"
+              >
+                <div>
+                  <div></div>
+                  <div></div>
+                </div>
+                <a
+                  href="#"
+                  class="logout-btn py-2 px-4 border border-dark rounded-3 fs-5 fw-bolder text-dark"
+                  >Logout</a
+                >
+              </div>
+            </div>
           </div>
-        </form>
-        <ul class="w-100 d-flex flex-column p-0 gap-3 my-3">
-          <li class="currently-user pt-3 px-4 w-100 d-flex flex-column align-items-start rounded-3">
-              <span class="text-success fw-bold fs-6">
-                . Currently using
-              </span>
-              <span class="text-dark fw-bolder">Aaddbarber</span>
-              <p class="location-user">Newworth Ct, Columbia</p>
-          </li>
-        
-        </ul>
-      </div>
-      <div class="modal-footer p-0 m-0 d-flex align-items-center justify-content-between">
-        <div>
-          <div>
-            
-          </div>
-          <div></div>
         </div>
-        <a href="#" class="logout-btn py-2 px-4 border border-dark rounded-3 fs-5 fw-bolder text-dark">Logout</a>
-      </div>
-       </div>
-       </div>
-      </div> -->
       </main>
     </div>
     <!-- Bootstrap Bundle JS -->
