--- a/management.html
+++ b/management.html
@@ -161,7 +161,7 @@
                   >
                 </a>
                 <a
-                  href="#"
+                  href="./profil.html"
                   class="d-flex align-items-center justify-content-center menu-item mt-2 position-relative"
                 >
                   <i class="fa-solid fa-house"></i>
